--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
+		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 			<ul style="font-size: 1.2em" class="navbar-nav">
 				<li class="nav-item active">
 					<a class="nav-link" href="#">Browse events<span class="sr-only"></span></a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>. Login</a>
+					<a class="nav-link" data-toggle="modal" data-target="#LoginModal"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Sign Up</a>
+					<a class="nav-link" data-toggle="modal" data-target="#SignupModalLong">Sign Up</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Help</a>
@@ -67,47 +67,85 @@
 
 	<div style="text-align: center;" class="container">
 		<h1 style="color: #006CAF;">Take Your Best Shot...</h1>
-		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Get Started</button>
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#LoginModal">Get Started</button>
 	</div>
 
-	<!-- Modal -->
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<!-- Modal for login -->
+	<div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div  class="modal-content">
 				<div class="modal-header">
-					<h5 style="margin: 0 auto;" class="modal-title" id="exampleModalLabel">Login</h5>
+					<h5 style="margin: 0 auto;" class="modal-title" id="LoginModalLabel">Login</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
 				<div class="modal-body">
-					<form class="container" id="needs-validation" novalidate>
+					<form class="container">
 						<i class="fa fa-user" aria-hidden="true"></i>
-						<label for="validationCustom04"><b>Username</b></label>
-						<input type="text" class="form-control" id="validationCustom04" placeholder="Username" required>
-						<div class="invalid-feedback">
-							Please provide a valid Username.
-						</div>
+						<label><b>Username</b></label>
+						<input type="text" class="form-control" placeholder="Username">
 						<br>
-
 						<i class="fa fa-key" aria-hidden="true"></i>
-						<label for="validationCustom05"><b>Password</b></label>
-						<input type="password" class="form-control" id="validationCustom05" placeholder="Password" required>
-						<div class="invalid-feedback">
-							Please provide a valid Password.
-						</div>
+						<label><b>Password</b></label>
+						<input type="password" class="form-control" placeholder="Password" data-toggle="password" name="password">
 						<br>
-						<div class="container" style="text-align: center;">
-							<button  class="btn btn-primary" type="submit">Login</button>
+						<div class="container"  style="text-align: center;">
+							<button class="btn btn-primary" type="submit">Login</button>
+						</div>
+						<br><hr>
+						<div>
+							<a data-dismiss="modal" data-toggle="modal" data-target="#SignupModalLong">New User?</a>
 						</div>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
-	<nav class="sticky-top">
-		
-	</nav>
+
+	<!-- Modal for Sign up -->
+	
+	<div class="modal fade" id="SignupModalLong" tabindex="-1" role="dialog" aria-labelledby="SignupModalLongLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 style="margin: 0 auto;" class="modal-title" id="SignupModalLongLabel">Sign Up</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form class="container">
+						<label><b>Firstname</b></label>
+						<input type="text" class="form-control" placeholder="Username">
+						<br>
+						<label><b>Lastname</b></label>
+						<input type="text" class="form-control" placeholder="Username">
+						<br>
+						<label><b>Email id</b></label>
+						<input type="text" class="form-control" placeholder="Username">
+						<br>
+						<i class="fa fa-key" aria-hidden="true"></i>
+						<label><b>Password</b></label>
+						<input type="password" class="form-control" placeholder="Password">
+						<br>
+						<i class="fa fa-key" aria-hidden="true"></i>
+						<label><b>Confirm Password</b></label>
+						<input type="password" class="form-control" placeholder="Password" >
+						<br>
+						<div class="container" style="text-align: center;">
+							<button  class="btn btn-primary" type="submit">Register</button>
+						</div>
+						<br><br><hr>
+						<div>
+							<a data-dismiss="modal" data-toggle="modal" data-target="#LoginModal">Already an user?</a>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<footer class="footer fixed-bottom">
 		<div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
 			EMS 2017
@@ -120,6 +158,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	
 	<script>(function() {
   'use strict';
 
@@ -133,6 +172,23 @@
       form.classList.add('was-validated');
     }, false);
   }, false);
-})();</script>
+})();
+
+</script>
+<script src="js/bootstrap-password-toggler.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
