--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="images/logoic.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>EMS-SI</title>
 </head>
 <body>
-
 	<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
 		<a class="navbar-brand" href="index.html">
 			<img src="images/headerlogo.png" height="45px" class="d-inline-block align-top" alt="">
@@ -27,7 +28,7 @@
 					<a class="nav-link" href="#">Browse events<span class="sr-only"></span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" data-toggle="modal" data-target="#LoginModal"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a>
+					<a class="nav-link" data-toggle="modal" data-target="#LoginModal">Login</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" data-toggle="modal" data-target="#SignupModalLong">Sign Up</a>
@@ -146,15 +147,58 @@
 		</div>
 	</div>
 
+
+<!-- Modal for Sign up -->
+	
+	<div class="modal fade" id="SignupModalLong" tabindex="-1" role="dialog" aria-labelledby="SignupModalLongLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 style="margin: 0 auto;" class="modal-title" id="SignupModalLongLabel">Sign Up</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form class="container">
+						<label><b>Firstname</b></label>
+						<input type="text" class="form-control" placeholder="Username">
+						<br>
+						<label><b>Lastname</b></label>
+						<input type="text" class="form-control" placeholder="Username">
+						<br>
+						<label><b>Email id</b></label>
+						<input type="text" class="form-control" placeholder="Username">
+						<br>
+						<i class="fa fa-key" aria-hidden="true"></i>
+						<label><b>Password</b></label>
+						<input type="password" class="form-control" placeholder="Password">
+						<br>
+						<i class="fa fa-key" aria-hidden="true"></i>
+						<label><b>Confirm Password</b></label>
+						<input type="password" class="form-control" placeholder="Password" >
+						<br>
+						<div class="container" style="text-align: center;">
+							<button  class="btn btn-primary" type="submit">Register</button>
+						</div>
+						<br><br><hr>
+						<div>
+							<a data-dismiss="modal" data-toggle="modal" data-target="#LoginModal">Already an user?</a>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<button class="btn btn-success" onclick='swal("Thank You For Registration!", "A verification link has been send to your e-mail", "success");'>succes</button>
+	<button class="btn btn-danger" onclick='swal("Failed!", "Please Register again!", "error");'>danger</button>
+
 	<footer class="footer fixed-bottom">
 		<div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
 			EMS 2017
 		</div>
 	</footer>
 
-
-	<!--<h1 style="color:white; background-color:rgba(4.683962264150937%,66.42415702982352%,100%,0.9)">PARAM MITTAL</h1>
-	-->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
