admin pages made

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</button>
 		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 			<ul style="font-size: 1.2em" class="navbar-nav">
-				<li class="nav-item active">
+				<li class="nav-item">
 					<a class="nav-link" href="#">Browse events<span class="sr-only"></span></a>
 				</li>
 				<li class="nav-item">
@@ -104,50 +104,6 @@
 		</div>
 	</div>
 
-	<!-- Modal for Sign up -->
-	
-	<div class="modal fade" id="SignupModalLong" tabindex="-1" role="dialog" aria-labelledby="SignupModalLongLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 style="margin: 0 auto;" class="modal-title" id="SignupModalLongLabel">Sign Up</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body">
-					<form class="container">
-						<label><b>Firstname</b></label>
-						<input type="text" class="form-control" placeholder="Username">
-						<br>
-						<label><b>Lastname</b></label>
-						<input type="text" class="form-control" placeholder="Username">
-						<br>
-						<label><b>Email id</b></label>
-						<input type="text" class="form-control" placeholder="Username">
-						<br>
-						<i class="fa fa-key" aria-hidden="true"></i>
-						<label><b>Password</b></label>
-						<input type="password" class="form-control" placeholder="Password">
-						<br>
-						<i class="fa fa-key" aria-hidden="true"></i>
-						<label><b>Confirm Password</b></label>
-						<input type="password" class="form-control" placeholder="Password" >
-						<br>
-						<div class="container" style="text-align: center;">
-							<button  class="btn btn-primary" type="submit">Register</button>
-						</div>
-						<br><br><hr>
-						<div>
-							<a data-dismiss="modal" data-toggle="modal" data-target="#LoginModal">Already an user?</a>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
 <!-- Modal for Sign up -->
 	
 	<div class="modal fade" id="SignupModalLong" tabindex="-1" role="dialog" aria-labelledby="SignupModalLongLabel" aria-hidden="true">
@@ -161,11 +117,20 @@
 				</div>
 				<div class="modal-body">
 					<form class="container">
-						<label><b>Firstname</b></label>
-						<input type="text" class="form-control" placeholder="Username">
+						<label><b>First Name</b></label>
+						<input type="text" class="form-control" placeholder="First Name">
 						<br>
-						<label><b>Lastname</b></label>
-						<input type="text" class="form-control" placeholder="Username">
+						<label><b>Last Name</b></label>
+						<input type="text" class="form-control" placeholder="Last Name">
+						<br>
+						<label><b>Address</b></label>
+						<input type="text" class="form-control" placeholder="Address">
+						<br>
+						<label><b>City</b></label>
+						<input type="text" class="form-control" placeholder="City">
+						<br>
+						<label><b>Mobile No.</b></label>
+						<input type="text" class="form-control" placeholder="Mobile No.">
 						<br>
 						<label><b>Email id</b></label>
 						<input type="text" class="form-control" placeholder="Username">
