--- a/delete_organiser.html
+++ b/delete_organiser.html
@@ -11,7 +11,6 @@
 	<title>EMS-AKGEC</title>
 </head>
 <body>
-
 	<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
 		<a class="navbar-brand" href="index.html">
 			<img src="images/headerlogo.png" height="45px" class="d-inline-block align-top" alt="">
@@ -22,16 +21,16 @@
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
+		<div class="justify-content-center">
+			<a style="color:white;vertical-align: middle; font-size: 1.6em; align-items: center; text-decoration: none;" href="admin_dashboard.html"> ADMIN</a>
+		</div>
 		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 			<ul style="font-size: 1.2em" class="navbar-nav">
-				<li class="nav-item active">
+				<li class="nav-item">
 					<a class="nav-link" href="#">Browse events<span class="sr-only"></span></a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>. Login</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Sign Up</a>
+					<a class="nav-link" href="#">Log out</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Help</a>
@@ -40,10 +39,32 @@
 		</div>
 	</nav>
 	<img class="fixed-top" style="margin-top: 71px; vertical-align:top; " src="images/shadow.png" width="100%">
-	<br><br><br>
-	<div class="container">
+	<br>
+<div class="container">
+	<div class="row " style="text-align: center;">
+		<div class="col-md-3 ">
+			<button onClick="location.href='event_status.html'" style="width: 85%; height: 50px; " type="button" class="btn btstyle2">Approve/Deny Events
+			</button>
+		</div>
+		<div class="col-md-3 ">
+			<button onClick="location.href='delete_organiser.html'" style="width: 85%; height: 50px" type="button" class="btn btstyle2">Delete Event Organiser</button>
+		</div>
+
+		<div class="col-md-3">
+			<button onClick="location.href='view_registration.html'" style="width: 85%; height: 50px; " type="button" class="btn btstyle2">View registrations</button>
+		</div>
+		<div class="col-md-3 ">
+			<button onClick="location.href='delete_ongoing_event.html'" style="width: 85%; height: 50px" type="button" class="btn btstyle2">Delete Ongoing event</button>
+		</div>
+		
+	</div>
+</div>
+
+<br>
+<br>
+<div class="container">
 		<div class="col-md-12" style="text-align: center;font-size: 3em">
-			Organiser Table
+			Delete Organiser
 		</div>
 		<br>
 		<div class="row">
