--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="images/logoic.ico">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="icon" href="images/logoic.ico">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>EMS-SI</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
 		<a class="navbar-brand" href="index.html">
 			<img src="images/headerlogo.png" height="45px" class="d-inline-block align-top" alt="">
 			<div style="vertical-align: middle; font-size: 1.5em" class="d-inline-block">
-			EMS	
+				EMS	
 			</div>
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,6 +24,9 @@
 		</button>
 		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 			<ul style="font-size: 1.2em" class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" data-toggle="modal" data-target="#OrganiserLoginModal">Create Event</a>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Browse events<span class="sr-only"></span></a>
 				</li>
@@ -104,7 +107,7 @@
 		</div>
 	</div>
 
-<!-- Modal for Sign up -->
+	<!-- Modal for Sign up -->
 	
 	<div class="modal fade" id="SignupModalLong" tabindex="-1" role="dialog" aria-labelledby="SignupModalLongLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
@@ -117,11 +120,16 @@
 				</div>
 				<div class="modal-body">
 					<form class="container">
-						<label><b>First Name</b></label>
-						<input type="text" class="form-control" placeholder="First Name">
-						<br>
-						<label><b>Last Name</b></label>
-						<input type="text" class="form-control" placeholder="Last Name">
+						<div class="row">
+							<div class="col">
+								<label><b>First Name</b></label>
+								<input type="text" class="form-control" placeholder="First name">
+							</div>
+							<div class="col">
+								<label><b>Last Name</b></label>
+								<input type="text" class="form-control" placeholder="Last name">
+							</div>
+						</div>
 						<br>
 						<label><b>Address</b></label>
 						<input type="text" class="form-control" placeholder="Address">
@@ -155,6 +163,103 @@
 			</div>
 		</div>
 	</div>
+	<!-- Modal for Organiser login -->
+
+	<div class="modal fade" id="OrganiserLoginModal" tabindex="-1" role="dialog" aria-labelledby="OrganiserLoginModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div  class="modal-content">
+				<div class="modal-header">
+					<h5 style="margin: 0 auto;" class="modal-title" id="OrganiserLoginModalLabel">Organiser Login</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form class="container">
+						<i class="fa fa-user" aria-hidden="true"></i>
+						<label><b>Username</b></label>
+						<input type="text" class="form-control" placeholder="Username">
+						<br>
+						<i class="fa fa-key" aria-hidden="true"></i>
+						<label><b>Password</b></label>
+						<input type="password" class="form-control" placeholder="Password" data-toggle="password" name="password">
+						<br>
+						<div class="container"  style="text-align: center;">
+							<button class="btn btn-primary" type="submit">Login</button>
+						</div>
+						<br><hr>
+						<div>
+							<a data-dismiss="modal" data-toggle="modal" data-target="#OrganiserSignupModalLong">New User?</a>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Modal for Organiser Sign up -->
+	
+	<div class="modal fade" id="OrganiserSignupModalLong" tabindex="-1" role="dialog" aria-labelledby="OrganiserSignupModalLongLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 style="margin: 0 auto;" class="modal-title" id="OrganiserSignupModalLongLabel">Organiser Sign Up</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form class="container">
+						<div class="row">
+							<div class="col">
+								<label><b>First Name</b></label>
+								<input type="text" class="form-control" placeholder="First name">
+							</div>
+							<div class="col">
+								<label><b>Last Name</b></label>
+								<input type="text" class="form-control" placeholder="Last name">
+							</div>
+						</div>
+						<br>
+						<label><b>Address</b></label>
+						<input type="text" class="form-control" placeholder="Address">
+						<br>
+						<label><b>City</b></label>
+						<input type="text" class="form-control" placeholder="City">
+						<br>
+						<label><b>Mobile No.</b></label>
+						<input type="text" class="form-control" placeholder="Mobile No.">
+						<br>
+						<label><b>Email id</b></label>
+						<input type="text" class="form-control" placeholder="Username">
+						<br>
+						<label><b>Organisation</b></label>
+						<input type="text" class="form-control" placeholder="Organisation">
+						<br>
+						<label><b>Description</b></label>
+						<input type="text" class="form-control" placeholder="Description">
+						<br>
+						<i class="fa fa-key" aria-hidden="true"></i>
+						<label><b>Password</b></label>
+						<input type="password" class="form-control" placeholder="Password">
+						<br>
+						<i class="fa fa-key" aria-hidden="true"></i>
+						<label><b>Confirm Password</b></label>
+						<input type="password" class="form-control" placeholder="Password" >
+						<br>
+						<div class="container" style="text-align: center;">
+							<button  class="btn btn-primary" type="submit">Register</button>
+						</div>
+						<br><br><hr>
+						<div>
+							<a data-dismiss="modal" data-toggle="modal" data-target="#OrganiserLoginModal">Already an Organiser?</a>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<button class="btn btn-success" onclick='swal("Thank You For Registration!", "A verification link has been send to your e-mail", "success");'>succes</button>
 	<button class="btn btn-danger" onclick='swal("Failed!", "Please Register again!", "error");'>danger</button>
 
@@ -169,34 +274,34 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 	
 	<script>(function() {
-  'use strict';
+		'use strict';
 
-  window.addEventListener('load', function() {
-    var form = document.getElementById('needs-validation');
-    form.addEventListener('submit', function(event) {
-      if (form.checkValidity() === false) {
-        event.preventDefault();
-        event.stopPropagation();
-      }
-      form.classList.add('was-validated');
-    }, false);
-  }, false);
-})();
+		window.addEventListener('load', function() {
+			var form = document.getElementById('needs-validation');
+			form.addEventListener('submit', function(event) {
+				if (form.checkValidity() === false) {
+					event.preventDefault();
+					event.stopPropagation();
+				}
+				form.classList.add('was-validated');
+			}, false);
+		}, false);
+	})();
 
 </script>
 <script src="js/bootstrap-password-toggler.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
+<script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-36251023-1']);
-  _gaq.push(['_setDomainName', 'jqueryscript.net']);
-  _gaq.push(['_trackPageview']);
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-36251023-1']);
+	_gaq.push(['_setDomainName', 'jqueryscript.net']);
+	_gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+	(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	})();
 
 </script>
 </body>
