--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 	<link rel="icon" href="images/logoic.ico">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>EMS-SI</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+
+	  	<button onclick="topFunction()" id="myBtn" title="Go to top"><b>^</b></button>
+	<nav id="navbaar" class="navbar navbar-expand-lg navbar-dark sticky-top">
 		<a class="navbar-brand" href="index.html">
 			<img src="images/headerlogo.png" height="45px" class="d-inline-block align-top" alt="">
 			<div style="vertical-align: middle; font-size: 1.5em" class="d-inline-block">
@@ -74,6 +76,7 @@
 		</div>
 	</div>
 	<!-- Modal for login -->
+
 	<div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div  class="modal-content">
@@ -294,33 +297,36 @@
 	<button class="btn btn-success" onclick='swal("Thank You For Registration!", "A verification link has been send to your e-mail", "success");'>succes</button>
 	<button class="btn btn-danger" onclick='swal("Failed!", "Please Register again!", "error");'>danger</button>
 
+	<br>
+	<br><br><br><br><br><br>
+	<div class="container">
+		<div class="row justify-content-between">
+			<div style="text-align: center;" class="col-md-5">
+				<img width="250px" src="images/ems.png">
+			</div>
+			<div class="col-md-6">
+				<div style="text-align: center;">
+					<h1 style="font-size: 45px">About EMS</h1>
+				</div>
+				<br>
+				<div style="font-family: 'Assistant', sans-serif">
+					<h5>The Project Event Management System is being developed in  PHP and MYSQL along with HTML, CSS and JavaScript (jQuery and AJAX) which mainly focuses on automating the event related tasks for both event organisers and event participants.</h5>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br><br><br><br><br><br>
 	<footer class="footer fixed-bottom">
 		<div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
 			EMS 2017
 		</div>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-	
-	<script>(function() {
-		'use strict';
-
-		window.addEventListener('load', function() {
-			var form = document.getElementById('needs-validation');
-			form.addEventListener('submit', function(event) {
-				if (form.checkValidity() === false) {
-					event.preventDefault();
-					event.stopPropagation();
-				}
-				form.classList.add('was-validated');
-			}, false);
-		}, false);
-	})();
-
-</script>
-<script src="js/bootstrap-password-toggler.min.js" type="text/javascript"></script>
+	<script src="js/bootstrap-password-toggler.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript">
 
 	var _gaq = _gaq || [];
