--- a/view_event_details.html
+++ b/view_event_details.html
@@ -11,7 +11,8 @@
   	<title>EMS-AKGEC</title>
   </head>
   <body>
-  	<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><b>^</b></button>
+  	<nav id="navbaar" class="navbar navbar-expand-lg navbar-dark sticky-top">
   		<a class="navbar-brand" href="index.html">
   			<img src="images/headerlogo.png" height="45px" class="d-inline-block align-top" alt="">
   			<div style="vertical-align: middle; font-size: 1.5em" class="d-inline-block">
@@ -44,34 +45,49 @@
   	<img class="fixed-top" style="margin-top: 71px; vertical-align:top; " src="images/shadow.png" width="100%">
   	<br><br>
     <div class="container">
-      
-      <img src="images/event1.jpg">
+      <div class="row">
+        <div class="col-md-8">
+          <img style="width: 100%" src="images/event1.jpg">
+        </div>
+        <div style="background-color: white; color: #666a73; opacity: 0.8" class="col-md-4">
+          <h1 style="color: black;">Event Name</h1>
+          <br>
+          <h4>Event date time</h4>
+          <br>
+          <h5>Event category</h5>
+          <br><br><br><br>
+          <button style="width:100%" class="btn btn-primary">Register</button>
+        </div>
+      </div>
+      <br><br>
+      <div style=" padding:10px; color: #666a73;" class="col-md-12">
+        <h1 style="color: black;">Description</h1>
+        <br>
+        <br>
+        <h4>bla bla bla....</h4>
+        <br><br>
+      </div>
+      <br><br><br>
+      <div style=" padding:10px; color: #666a73;" class="col-md-12">
+        <h1 style="color: black;">Comments</h1>
+        <br>
+        <br>
+        <h4>bla bla bla....</h4>
+        <br><br>
+      </div>
     </div>
-  	<footer class="footer fixed-bottom">
-  		<div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
-  			EMS 2017
-  		</div>
-  	</footer>
+    <footer class="footer fixed-bottom">
+      <div style="text-align: center; padding: 10px; color: white;" class="bg-dark">
+       EMS 2017
+     </div>
+   </footer>
 
-
+<br><br><br><br>
 	<!--<h1 style="color:white; background-color:rgba(4.683962264150937%,66.42415702982352%,100%,0.9)">PARAM MITTAL</h1>
 	-->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-	<script>(function() {
-		'use strict';
-
-		window.addEventListener('load', function() {
-			var form = document.getElementById('needs-validation');
-			form.addEventListener('submit', function(event) {
-				if (form.checkValidity() === false) {
-					event.preventDefault();
-					event.stopPropagation();
-				}
-				form.classList.add('was-validated');
-			}, false);
-		}, false);
-	})();</script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
